@@ -40,9 +40,8 @@ import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.apache.CloudLegacySolrClient;
-import org.apache.solr.client.solrj.apache.HttpApacheSolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
+import org.apache.solr.client.solrj.jetty.CloudJettySolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.QueryRequest;
 import org.apache.solr.client.solrj.request.SolrQuery;
@@ -158,7 +157,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
         builder
             .withDefaultCollection(collectionName)
             .sendUpdatesOnlyToShardLeaders()
-            .withHttpClient(((CloudLegacySolrClient) cloudClient).getHttpClient())
+            .withHttpClient(((CloudJettySolrClient) cloudClient).getHttpClient())
             .build()) {
       StoppableIndexingThread thread =
           new StoppableIndexingThread(controlClient, client, "i1", true);
@@ -233,19 +232,7 @@ public class ShardSplitTest extends BasicDistributedZkTest {
               CollectionAdminRequest.addReplicaToShard(collectionName, SHARD1_0);
           // use control client because there are fewer chances of it being the node being restarted
           // this is to avoid flakiness of test because of NoHttpResponseExceptions
-          String control_collection =
-              client
-                  .getClusterState()
-                  .getCollection("control_collection")
-                  .getReplicas()
-                  .get(0)
-                  .getBaseUrl();
-          try (var control =
-              new HttpApacheSolrClient.Builder(control_collection)
-                  .withHttpClient(((CloudLegacySolrClient) client).getHttpClient())
-                  .build()) {
-            state = addReplica.processAndWait(control, 30);
-          }
+          state = addReplica.processAndWait(controlClient, 30);
 
           ZkStateReader.from(cloudClient)
               .waitForState(
@@ -306,11 +293,12 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     int count = 0;
     for (Replica replica : shard.getReplicas()) {
       var client =
-          new HttpApacheSolrClient.Builder(replica.getBaseUrl())
-              .withDefaultCollection(replica.getCoreName())
-              .withHttpClient(((CloudLegacySolrClient) cloudClient).getHttpClient())
-              .build();
-      QueryResponse response = client.query(new SolrQuery("q", "*:*", "distrib", "false"));
+          clients.stream()
+              .filter(c -> c.getBaseURL().equals(replica.getBaseUrl()))
+              .findAny()
+              .orElseThrow();
+      QueryResponse response =
+          client.query(replica.getCoreName(), new SolrQuery("q", "*:*", "distrib", "false"));
       if (log.isInfoEnabled()) {
         log.info(
             "Found numFound={} on replica: {}",
@@ -1282,13 +1270,8 @@ public class ShardSplitTest extends BasicDistributedZkTest {
     QueryRequest request = new QueryRequest(params);
     request.setPath("/admin/collections");
 
-    String baseUrl = shardToJetty.get(SHARD1).get(0).jetty.getBaseUrl().toString();
-
-    try (SolrClient baseServer =
-        new HttpApacheSolrClient.Builder(baseUrl)
-            .withConnectionTimeout(30, TimeUnit.SECONDS)
-            .withSocketTimeout(5, TimeUnit.MINUTES)
-            .build()) {
+    JettySolrRunner jetty = shardToJetty.get(SHARD1).getFirst().jetty;
+    try (SolrClient baseServer = jetty.newClient(30_000, 300_000)) {
       NamedList<Object> rsp = baseServer.request(request);
       if (log.isInfoEnabled()) {
         log.info("Shard split response: {}", Utils.toJSONString(rsp));
